--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@auth/supabase-adapter": "^1.8.0",
     "@prisma/client": "^6.4.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
