--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@stripe/stripe-js": "^6.1.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "binance-pay": "^0.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-react-hooks": "^5.2.0",
